prevent long urls from overflowing viewport bounds

--- a/pages/episodes/episodes.module.css
+++ b/pages/episodes/episodes.module.css
@@ -3,8 +3,20 @@
     gap: 2rem;
     grid-template-columns: max-content minmax(200px, 60ch);
     justify-content: center;
+    position: relative;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 .main iframe {
     margin-bottom: 1.6rem;
 }
+
+.main a {
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    vertical-align: bottom;
+}
+
